// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Next - using and await using > Next - using (fail) > { using [x] = y; } 1`] = `
"SyntaxError [1:8-1:9]: Using declaration cannot have destructuring patterns
> 1 | { using [x] = y; }
    |         ^ Using declaration cannot have destructuring patterns"
`;

exports[`Next - using and await using > Next - using (fail) > { using { x } = y; } 1`] = `
"SyntaxError [1:8-1:9]: Using declaration cannot have destructuring patterns
> 1 | { using { x } = y; }
    |         ^ Using declaration cannot have destructuring patterns"
`;

exports[`Next - using and await using > Next - using (fail) > { using x = null } 1`] = `
"SyntaxError [1:8-1:9]: Unexpected token: 'identifier'
> 1 | { using x = null }
    |         ^ Unexpected token: 'identifier'"
`;

exports[`Next - using and await using > Next - using (fail) > { using x; } 1`] = `
"SyntaxError [1:9-1:10]: Using declaration must have an initializer
> 1 | { using x; }
    |          ^ Using declaration must have an initializer"
`;

exports[`Next - using and await using > Next - using (fail) > await using foo = null 1`] = `
"SyntaxError [1:0-1:5]: 'await using' is only allowed inside async functions and module top-level
> 1 | await using foo = null
    | ^^^^^ 'await using' is only allowed inside async functions and module top-level"
`;

exports[`Next - using and await using > Next - using (fail) > class C { static { await using x = null; } } 1`] = `
"SyntaxError [1:19-1:24]: cannot use "await" in static blocks
> 1 | class C { static { await using x = null; } }
    |                    ^^^^^ cannot use "await" in static blocks"
`;

exports[`Next - using and await using > Next - using (fail) > for (await using x of y); 1`] = `
"SyntaxError [1:5-1:10]: 'await using' is only allowed inside async functions and module top-level
> 1 | for (await using x of y);
    |      ^^^^^ 'await using' is only allowed inside async functions and module top-level"
`;

exports[`Next - using and await using > Next - using (fail) > for (using { x } of y); 1`] = `
"SyntaxError [1:11-1:12]: Using declaration cannot have destructuring patterns
> 1 | for (using { x } of y);
    |            ^ Using declaration cannot have destructuring patterns"
`;

exports[`Next - using and await using > Next - using (fail) > for (using x = 1 in y); 1`] = `
"SyntaxError [1:17-1:19]: Using declaration is not allowed in for-in statements
> 1 | for (using x = 1 in y);
    |                  ^^ Using declaration is not allowed in for-in statements"
`;

exports[`Next - using and await using > Next - using (fail) > for (using x in y); 1`] = `
"SyntaxError [1:13-1:15]: Using declaration is not allowed in for-in statements
> 1 | for (using x in y);
    |              ^^ Using declaration is not allowed in for-in statements"
`;

exports[`Next - using and await using > Next - using (fail) > function f() { await using x = null; } 1`] = `
"SyntaxError [1:15-1:20]: 'await using' is only allowed inside async functions and module top-level
> 1 | function f() { await using x = null; }
    |                ^^^^^ 'await using' is only allowed inside async functions and module top-level"
`;

exports[`Next - using and await using > Next - using (fail) > function f() { await using x = null; } 2`] = `
"SyntaxError [1:15-1:20]: 'await using' is only allowed inside async functions and module top-level
> 1 | function f() { await using x = null; }
    |                ^^^^^ 'await using' is only allowed inside async functions and module top-level"
`;

exports[`Next - using and await using > Next - using (fail) > using foo = null 1`] = `
"SyntaxError [1:0-1:5]: Using declaration is not allowed in the global scope
> 1 | using foo = null
    | ^^^^^ Using declaration is not allowed in the global scope"
`;

exports[`Next - using and await using > Next - using (fail) > using foo = null 2`] = `
"SyntaxError [1:0-1:5]: Using declaration is not allowed in the global scope
> 1 | using foo = null
    | ^^^^^ Using declaration is not allowed in the global scope"
`;

exports[`Next - using and await using > Next - using (pass) > { await using x = null; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "x",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": null,
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "await using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > { using a = 1, b = 2; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "a",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": 1,
              },
              "type": "VariableDeclarator",
            },
            {
              "id": {
                "name": "b",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": 2,
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > { using of = 1; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "of",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": 1,
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > { using using = null; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "using",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": null,
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > { using x = null } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "x",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": null,
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > { using x = null; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "x",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": null,
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > async function f() { await using x = null; } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "id": {
                  "name": "x",
                  "type": "Identifier",
                },
                "init": {
                  "type": "Literal",
                  "value": null,
                },
                "type": "VariableDeclarator",
              },
            ],
            "kind": "await using",
            "type": "VariableDeclaration",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > async function f() { for (await using x of y); } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "await": false,
            "body": {
              "type": "EmptyStatement",
            },
            "left": {
              "declarations": [
                {
                  "id": {
                    "name": "x",
                    "type": "Identifier",
                  },
                  "init": null,
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "await using",
              "type": "VariableDeclaration",
            },
            "right": {
              "name": "y",
              "type": "Identifier",
            },
            "type": "ForOfStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > async function f() { for await (await using x of y); } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "await": true,
            "body": {
              "type": "EmptyStatement",
            },
            "left": {
              "declarations": [
                {
                  "id": {
                    "name": "x",
                    "type": "Identifier",
                  },
                  "init": null,
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "await using",
              "type": "VariableDeclaration",
            },
            "right": {
              "name": "y",
              "type": "Identifier",
            },
            "type": "ForOfStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > async function f() { for await (using x of y); } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "await": true,
            "body": {
              "type": "EmptyStatement",
            },
            "left": {
              "declarations": [
                {
                  "id": {
                    "name": "x",
                    "type": "Identifier",
                  },
                  "init": null,
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "using",
              "type": "VariableDeclaration",
            },
            "right": {
              "name": "y",
              "type": "Identifier",
            },
            "type": "ForOfStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > async function f() { using x = null; } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "id": {
                  "name": "x",
                  "type": "Identifier",
                },
                "init": {
                  "type": "Literal",
                  "value": null,
                },
                "type": "VariableDeclarator",
              },
            ],
            "kind": "using",
            "type": "VariableDeclaration",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > await using x = null; 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "x",
            "type": "Identifier",
          },
          "init": {
            "type": "Literal",
            "value": null,
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "await using",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > class C { static { using x = null; } } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "body": [
              {
                "declarations": [
                  {
                    "id": {
                      "name": "x",
                      "type": "Identifier",
                    },
                    "init": {
                      "type": "Literal",
                      "value": null,
                    },
                    "type": "VariableDeclarator",
                  },
                ],
                "kind": "using",
                "type": "VariableDeclaration",
              },
            ],
            "type": "StaticBlock",
          },
        ],
        "type": "ClassBody",
      },
      "decorators": [],
      "id": {
        "name": "C",
        "type": "Identifier",
      },
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > const f = async () => { await using x = null; }; 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "f",
            "type": "Identifier",
          },
          "init": {
            "async": true,
            "body": {
              "body": [
                {
                  "declarations": [
                    {
                      "id": {
                        "name": "x",
                        "type": "Identifier",
                      },
                      "init": {
                        "type": "Literal",
                        "value": null,
                      },
                      "type": "VariableDeclarator",
                    },
                  ],
                  "kind": "await using",
                  "type": "VariableDeclaration",
                },
              ],
              "type": "BlockStatement",
            },
            "expression": false,
            "generator": false,
            "params": [],
            "type": "ArrowFunctionExpression",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "const",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > export await using x = null; 1`] = `
{
  "body": [
    {
      "attributes": [],
      "declaration": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": {
              "type": "Literal",
              "value": null,
            },
            "type": "VariableDeclarator",
          },
        ],
        "kind": "await using",
        "type": "VariableDeclaration",
      },
      "source": null,
      "specifiers": [],
      "type": "ExportNamedDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > export using x = null; 1`] = `
{
  "body": [
    {
      "attributes": [],
      "declaration": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": {
              "type": "Literal",
              "value": null,
            },
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "source": null,
      "specifiers": [],
      "type": "ExportNamedDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > for (await using x of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "await using",
        "type": "VariableDeclaration",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > for (using of of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "of",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > for (using of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "name": "using",
        "type": "Identifier",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > for (using x = 1;;); 1`] = `
{
  "body": [
    {
      "body": {
        "type": "EmptyStatement",
      },
      "init": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": {
              "type": "Literal",
              "value": 1,
            },
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "test": null,
      "type": "ForStatement",
      "update": null,
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > for (using x of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > for await (using x of y); 1`] = `
{
  "body": [
    {
      "await": true,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > function f() { using
foo = 1 } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "expression": {
              "name": "using",
              "type": "Identifier",
            },
            "type": "ExpressionStatement",
          },
          {
            "expression": {
              "left": {
                "name": "foo",
                "type": "Identifier",
              },
              "operator": "=",
              "right": {
                "type": "Literal",
                "value": 1,
              },
              "type": "AssignmentExpression",
            },
            "type": "ExpressionStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > function f() { using x = null; } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "id": {
                  "name": "x",
                  "type": "Identifier",
                },
                "init": {
                  "type": "Literal",
                  "value": null,
                },
                "type": "VariableDeclarator",
              },
            ],
            "kind": "using",
            "type": "VariableDeclaration",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > function using() {} 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "using",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > using x = null; 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "x",
            "type": "Identifier",
          },
          "init": {
            "type": "Literal",
            "value": null,
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "using",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > var using = 1; 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "using",
            "type": "Identifier",
          },
          "init": {
            "type": "Literal",
            "value": 1,
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "var",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - using and await using > Next - using (pass) > var using = 1; 2`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "using",
            "type": "Identifier",
          },
          "init": {
            "type": "Literal",
            "value": 1,
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "var",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;
